--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-10" />
+<meta name="date" content="2025-10-14" />
 
 <title>Modeling signal decay functions</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-10</h4>
+<h4 class="date">2025-10-14</h4>
 
 </div>
 
@@ -386,7 +386,9 @@ the steps to create and apply different decay functions for
 <em>PathwaySpace</em> projections. Nodes in this example represent
 spots, providing an intuitive starting for understanding how these
 functions can be used to capture behaviors in larger or more complex
-graphs, such as from spatial transcriptomics data.</p>
+graphs, such as from <a
+href="spatial-transcriptomics.html"><strong>spatial
+transcriptomics</strong></a> data.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
@@ -395,42 +397,100 @@ library(igraph)
 library(ggplot2)
 library(RGraphSpace)
 library(PathwaySpace)
-library(SpotSpace)</code></pre>
+library(SpotSpace)
+library(patchwork)</code></pre>
 <pre class="r"><code># Create a lattice graph with igraph
 g &lt;- make_lattice(c(9, 9), directed = FALSE)
 V(g)$name &lt;- paste0(&quot;n&quot;,1:vcount(g))
 gs &lt;- GraphSpace(g, layout = layout_on_grid(g))
 plotGraphSpace(gs, add.labels = TRUE)</code></pre>
-<p><img src="modeling-signal-decay_files/figure-html/Modeling%20signal%20decay%20-%201-1.png" width="672" /></p>
+<p><img src="modeling-signal-decay_files/figure-html/Setting%20basic%20input%20data%20-%201-1.png" width="672" /></p>
 <pre class="r"><code># Build a PathwaySpace object
 ps &lt;- buildPathwaySpace(gs)</code></pre>
 </div>
-<div id="setting-a-decay-function" class="section level1">
-<h1>Setting a decay function</h1>
-<p>Next, we will set a linear decay model for all vertices. A decay
-factor (in <code>[0,1]</code>) indicates how much the signal decreases
-as a function of distance in pathway space. For example, at the
-<code>pdist</code> reference distance, the signal intensity will be the
-initial signal multiplied by <code>decay</code>. For further details on
-the available decay functions, refer to the documentation and code
-examples of the <code>weibullDecay()</code>, <code>expDecay()</code>,
-and <code>linearDecay()</code> functions.</p>
-<pre class="r"><code># Setting a linear signal decay model for all vertices
-vertexDecay(ps) &lt;- signalDecay(&quot;linear&quot;, decay = 0.001)</code></pre>
+<div id="creating-a-decay-function" class="section level1">
+<h1>Creating a decay function</h1>
+<p>In the context of <em>PathwaySpace</em>, a decay function describes
+how a signal decreases as a function of distance, modeling the gradual
+loss of intensity. These functions are used to attenuate signals over
+graph-based domains, so contributions from distant vertices are weighted
+less than those nearby. <em>PathwaySpace</em> provides three built-in
+decay function constructors, <code>linearDecay()</code>,
+<code>expDecay()</code>, and <code>weibullDecay()</code>, all sharing a
+consistent argument structure for ease use and comparison:</p>
+<p><span class="math display">\[
+\begin{aligned}
+y &amp;= signal \times \Bigl(1 - (1 - decay) \times
+\tfrac{x}{\text{pdist}}\Bigr) &amp;&amp; (\text{Linear}) \\[10pt]
+y &amp;= signal \times decay^{\left(\tfrac{x}{\text{pdist}}\right)}
+&amp;&amp; (\text{Exponential}) \\[14pt]
+y &amp;= signal \times
+decay^{\left(\tfrac{x}{\text{pdist}}\right)^{\text{shape}}} &amp;&amp;
+(\text{Weibull})
+\end{aligned}
+\]</span> where <span class="math inline">\(\boldsymbol{signal}\)</span>
+represents the initial intensity, <span
+class="math inline">\(\boldsymbol{decay}\)</span> controls the rate of
+attenuation, <span class="math inline">\(\boldsymbol{x}\)</span> is a
+vector of normalized distances, <span
+class="math inline">\(\boldsymbol{shape}\)</span> adjusts the curvature
+of the decay, <span class="math inline">\(\boldsymbol{pdist}\)</span> is
+a normalization term, and <span
+class="math inline">\(\boldsymbol{y}\)</span> is the resulting signal
+decay values. Next, the main arguments are illustrated using the
+<code>weibullDecay()</code> constructor, which returns a decay function
+with customized parameters.</p>
+<pre class="r"><code>weibullDecay(decay = 0.25, shape = 2, pdist = 0.75)</code></pre>
+<pre><code>## function (x, signal) 
+## {
+##     y &lt;- signal * 0.25^((x/0.75)^2)
+##     return(y)
+## }
+## &lt;environment: 0x6143fe5d95e0&gt;
+## attr(,&quot;name&quot;)
+## [1] &quot;weibullDecay&quot;</code></pre>
+<p></br></p>
+<p>… and to explore how different parameters affect the signal
+attenuation, simply set <code>plot = TRUE</code>, which will generate a
+<code>ggplot</code> illustrating the decay curves.</p>
+<pre class="r"><code># Run Weibull decay with decay = 0.5, shape = 1, and pdist = 0.2
+p1 &lt;- weibullDecay(decay = 0.5, shape = 1, pdist = 0.1, plot = TRUE)
+
+# Run Weibull decay with decay = 0.5, shape = 2, and pdist = 0.50
+p2 &lt;- weibullDecay(decay = 0.5, shape = 2, pdist = 0.50, plot = TRUE)
+
+# Run Weibull decay with decay = 0.25, shape = 3, and pdist = 0.75
+p3 &lt;- weibullDecay(decay = 0.25, shape = 4, pdist = 0.75, plot = TRUE)
+
+p1 + p2 + p3</code></pre>
+<p><img src="modeling-signal-decay_files/figure-html/Creating%20a%20decay%20function%20-%204.2-1.png" width="100%" /></p>
+<p>Note that the normalization term <span
+class="math inline">\(\boldsymbol{pdist}\)</span> anchors the decay to a
+reference distance where the initial signal <span
+class="math inline">\(S_0\)</span> decays to <span
+class="math inline">\(S_0 * decay\)</span>, controlling the extent over
+which the signal is projected along x-axis. The <span
+class="math inline">\(\boldsymbol{shape}\)</span> parameter, on the
+other hand, controls the curvature of the decay function: When
+<code>shape = 1</code>, the function follows an exponential decay; and
+for <code>shape &gt; 1</code>, the curve transitions from convex to
+concave, exhibiting an inflection point.</p>
 </div>
-<div id="setting-a-distance-unit" class="section level1">
-<h1>Setting a distance unit</h1>
-<p>Before running a projection method, we also need to specify a
-distance unit for the signal decay function. This distance unit will
-affect the extent over which the convolution operation projects the
-signal, scaled to the coordinate space. Here we will use the
-center-to-center distance between spots.</p>
-<pre class="r"><code># Get distance to the nearest spot
+<div id="assigning-decay-to-vertices" class="section level1">
+<h1>Assigning decay to vertices</h1>
+<p>Returning to our lattice example, next we assign a linear decay
+function to the <em>PathwaySpace</em> vertices, setting <span
+class="math inline">\(\boldsymbol{pdist}\)</span> as the average
+center-to-center distance between them. For more details, refer to the
+documentation of the <code>linearDecay()</code> constructor.</p>
+<pre class="r"><code># Get distance to the nearest vertex
 near_df &lt;- getNearestNode(ps)
 pdist &lt;- mean(near_df$dist)
-# The &#39;pdist&#39; is the average center-to-center distance between spots
+# The &#39;pdist&#39; is the average center-to-center distance between vertices
 pdist</code></pre>
 <pre><code>## [1] 0.1</code></pre>
+<pre class="r"><code># Setting a linear decay model for all vertices
+vertexDecay(ps) &lt;- linearDecay(pdist = pdist)</code></pre>
 </div>
 <div id="running-pathwayspace" class="section level1">
 <h1>Running <em>PathwaySpace</em></h1>
@@ -440,19 +500,19 @@ pdist</code></pre>
 set.seed(10)
 vertexSignal(ps) &lt;- sample(c(0,1), gs_vcount(ps), replace = TRUE)</code></pre>
 <pre class="r"><code># Running and plotting projections
-ps &lt;- circularProjection(ps, k = 1, pdist = pdist)
+ps &lt;- circularProjection(ps, k = 1)
 plotPathwaySpace(ps)</code></pre>
-<p><img src="modeling-signal-decay_files/figure-html/Modeling%20signal%20decay%20-%206-1.png" width="672" /></p>
+<p><img src="modeling-signal-decay_files/figure-html/Running%20PathwaySpace%20-%202-1.png" width="672" /></p>
 <p>By assigning a new decay model to specific vertices, we can explore
 how signals propagate across the network under different rules. To
 illustrate, next we assign a Weibull decay function to vertex
 <code>n34</code>.</p>
 <pre class="r"><code># Setting a Weibull decay function for vertex &#39;n34&#39;
-vertexDecay(ps)[[&quot;n34&quot;]] &lt;- signalDecay(&quot;weibull&quot;, shape = 2, decay = 0.75)</code></pre>
+vertexDecay(ps)[[&quot;n34&quot;]] &lt;- weibullDecay(shape = 2, pdist = pdist*10)</code></pre>
 <pre class="r"><code># Running and plotting projections
-ps &lt;- circularProjection(ps, k = 1, pdist = pdist)
+ps &lt;- circularProjection(ps, k = 1)
 plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
-<p><img src="modeling-signal-decay_files/figure-html/Modeling%20signal%20decay%20-%208-1.png" width="672" /></p>
+<p><img src="modeling-signal-decay_files/figure-html/Running%20PathwaySpace%20-%204-1.png" width="672" /></p>
 </div>
 <div id="session-information" class="section level1">
 <h1>Session information</h1>
@@ -479,8 +539,8 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] SpotSpace_0.0.1    PathwaySpace_1.0.3 RGraphSpace_1.1.0  ggplot2_3.5.2.9001
-## [5] igraph_2.1.4       bs4cards_0.1.1    
+## [1] patchwork_1.3.2    SpotSpace_0.0.1    PathwaySpace_1.0.3 RGraphSpace_1.1.0 
+## [5] ggplot2_3.5.2.9001 igraph_2.1.4       bs4cards_0.1.1    
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -488,33 +548,33 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ##   [7] spatstat.geom_3.5-0    matrixStats_1.5.0      ggridges_0.5.7        
 ##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
 ##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
-##  [16] fastmap_1.2.0          fontawesome_0.5.3      promises_1.3.3        
-##  [19] rmarkdown_2.29         purrr_1.1.0            xfun_0.53             
-##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
-##  [25] later_1.4.4            spatstat.utils_3.1-5   irlba_2.3.5.1         
-##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
-##  [31] ica_1.0-3              spatstat.data_3.1-8    bslib_0.9.0           
-##  [34] stringi_1.8.7          RColorBrewer_1.1-3     reticulate_1.43.0     
-##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
-##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
-##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
-##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
-##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
-##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
-##  [55] spatstat.random_3.4-1  spatstat.explore_3.5-2 codetools_0.2-20      
-##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
-##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
-##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
-##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
-##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
-##  [73] fitdistrplus_1.2-4     pillar_1.11.0          Seurat_5.3.1.0000     
-##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
-##  [79] RcppHNSW_0.6.0         sp_2.2-0               scales_1.4.0          
-##  [82] globals_0.18.0         xtable_1.8-4           glue_1.8.0            
-##  [85] lazyeval_0.2.2         tools_4.5.1            data.table_1.17.8     
-##  [88] RSpectra_0.16-2        RANN_2.6.2             fs_1.6.6              
-##  [91] dotCall64_1.2          cowplot_1.2.0          grid_4.5.1            
-##  [94] tidyr_1.3.1            nlme_3.1-168           patchwork_1.3.2       
+##  [16] fastmap_1.2.0          labeling_0.4.3         fontawesome_0.5.3     
+##  [19] promises_1.3.3         rmarkdown_2.29         purrr_1.1.0           
+##  [22] xfun_0.53              cachem_1.1.0           jsonlite_2.0.0        
+##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.1-5  
+##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
+##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
+##  [34] bslib_0.9.0            stringi_1.8.7          RColorBrewer_1.1-3    
+##  [37] reticulate_1.43.0      spatstat.univar_3.1-4  parallelly_1.45.1     
+##  [40] lmtest_0.9-40          jquerylib_0.1.4        scattermore_1.2       
+##  [43] Rcpp_1.1.0             knitr_1.50             tensor_1.5.1          
+##  [46] future.apply_1.20.0    zoo_1.8-14             sctransform_0.4.2     
+##  [49] httpuv_1.6.16          Matrix_1.7-4           splines_4.5.1         
+##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
+##  [55] yaml_2.3.10            spatstat.random_3.4-1  spatstat.explore_3.5-2
+##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
+##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
+##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
+##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
+##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
+##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.0         
+##  [76] Seurat_5.3.1.0000      KernSmooth_2.23-26     plotly_4.11.0         
+##  [79] generics_0.1.4         RcppHNSW_0.6.0         sp_2.2-0              
+##  [82] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
+##  [85] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
+##  [88] data.table_1.17.8      RSpectra_0.16-2        RANN_2.6.2            
+##  [91] fs_1.6.6               dotCall64_1.2          cowplot_1.2.0         
+##  [94] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
 ##  [97] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
 ## [100] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
 ## [103] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
