--- a/projection-methods.html
+++ b/projection-methods.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-10" />
+<meta name="date" content="2025-10-14" />
 
 <title>Network signal projections</title>
 
@@ -374,7 +374,7 @@ div.tocify {
 <h3 class="subtitle">A guided tutorial on <em>PathwaySpace</em>
 projection methods</h3>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-10</h4>
+<h4 class="date">2025-10-14</h4>
 
 </div>
 
@@ -648,8 +648,8 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] SpotSpace_0.0.1    PathwaySpace_1.0.3 RGraphSpace_1.1.0  ggplot2_3.5.2.9001
-## [5] igraph_2.1.4       bs4cards_0.1.1    
+## [1] patchwork_1.3.2    SpotSpace_0.0.1    PathwaySpace_1.0.3 RGraphSpace_1.1.0 
+## [5] ggplot2_3.5.2.9001 igraph_2.1.4       bs4cards_0.1.1    
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -657,33 +657,33 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##   [7] spatstat.geom_3.5-0    matrixStats_1.5.0      ggridges_0.5.7        
 ##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
 ##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
-##  [16] fastmap_1.2.0          fontawesome_0.5.3      promises_1.3.3        
-##  [19] rmarkdown_2.29         purrr_1.1.0            xfun_0.53             
-##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
-##  [25] later_1.4.4            spatstat.utils_3.1-5   irlba_2.3.5.1         
-##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
-##  [31] ica_1.0-3              spatstat.data_3.1-8    bslib_0.9.0           
-##  [34] stringi_1.8.7          RColorBrewer_1.1-3     reticulate_1.43.0     
-##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
-##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
-##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
-##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
-##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
-##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
-##  [55] spatstat.random_3.4-1  spatstat.explore_3.5-2 codetools_0.2-20      
-##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
-##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
-##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
-##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
-##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
-##  [73] fitdistrplus_1.2-4     pillar_1.11.0          Seurat_5.3.1.0000     
-##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
-##  [79] RcppHNSW_0.6.0         sp_2.2-0               scales_1.4.0          
-##  [82] globals_0.18.0         xtable_1.8-4           glue_1.8.0            
-##  [85] lazyeval_0.2.2         tools_4.5.1            data.table_1.17.8     
-##  [88] RSpectra_0.16-2        RANN_2.6.2             fs_1.6.6              
-##  [91] dotCall64_1.2          cowplot_1.2.0          grid_4.5.1            
-##  [94] tidyr_1.3.1            nlme_3.1-168           patchwork_1.3.2       
+##  [16] fastmap_1.2.0          labeling_0.4.3         fontawesome_0.5.3     
+##  [19] promises_1.3.3         rmarkdown_2.29         purrr_1.1.0           
+##  [22] xfun_0.53              cachem_1.1.0           jsonlite_2.0.0        
+##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.1-5  
+##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
+##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
+##  [34] bslib_0.9.0            stringi_1.8.7          RColorBrewer_1.1-3    
+##  [37] reticulate_1.43.0      spatstat.univar_3.1-4  parallelly_1.45.1     
+##  [40] lmtest_0.9-40          jquerylib_0.1.4        scattermore_1.2       
+##  [43] Rcpp_1.1.0             knitr_1.50             tensor_1.5.1          
+##  [46] future.apply_1.20.0    zoo_1.8-14             sctransform_0.4.2     
+##  [49] httpuv_1.6.16          Matrix_1.7-4           splines_4.5.1         
+##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
+##  [55] yaml_2.3.10            spatstat.random_3.4-1  spatstat.explore_3.5-2
+##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
+##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
+##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
+##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
+##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
+##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.0         
+##  [76] Seurat_5.3.1.0000      KernSmooth_2.23-26     plotly_4.11.0         
+##  [79] generics_0.1.4         RcppHNSW_0.6.0         sp_2.2-0              
+##  [82] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
+##  [85] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
+##  [88] data.table_1.17.8      RSpectra_0.16-2        RANN_2.6.2            
+##  [91] fs_1.6.6               dotCall64_1.2          cowplot_1.2.0         
+##  [94] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
 ##  [97] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
 ## [100] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
 ## [103] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
