--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -446,7 +446,7 @@ with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x6143fe5d95e0&gt;
+## &lt;environment: 0x5836ebf67ed0&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
