--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -446,7 +446,7 @@ with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x613874da3850&gt;
+## &lt;environment: 0x55aefa7b6a80&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -467,7 +467,7 @@ p1 + p2 + p3</code></pre>
 <p>Note that the normalization term <span
 class="math inline">\(\boldsymbol{pdist}\)</span> anchors the decay to a
 reference distance where the initial signal <span
-class="math inline">\(S_0\)</span> decays to <span
+class="math inline">\(S_0\)</span> decreases to <span
 class="math inline">\(S_0 * decay\)</span>, controlling the extent over
 which the signal is projected along x-axis. The <span
 class="math inline">\(\boldsymbol{shape}\)</span> parameter, on the
