--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -446,7 +446,7 @@ with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x55aefa7b6a80&gt;
+## &lt;environment: 0x640719b90a80&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -474,7 +474,7 @@ class="math inline">\(\boldsymbol{shape}\)</span> parameter, on the
 other hand, controls the curvature of the decay function: When
 <code>shape = 1</code>, the function follows an exponential decay; and
 for <code>shape &gt; 1</code>, the curve transitions from convex to
-concave, exhibiting an inflection point.</p>
+concave, increasingly sigmoidal.</p>
 </div>
 <div id="assigning-decay-to-vertices" class="section level1">
 <h1>Assigning decay to vertices</h1>
